--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "https://github.com/npm/npm.git"
+    "url": "https://github.com/syon/fontcache.git"
   }
 }
